comienzo foto en navbar

--- a/client/src/components/Navbar/NavbarApp.scss
+++ b/client/src/components/Navbar/NavbarApp.scss
@@ -18,6 +18,14 @@
   @include BotonBlanco;
 }
 
+.NavbarBrand {
+  img {
+    width: 8rem;
+    height: auto;
+    margin-bottom: 0.5rem;
+  }
+}
+
 .navBoton {
   @include BotonBlanco;
 
