--- a/client/src/pages/users/UserProfile/UserProfile.scss
+++ b/client/src/pages/users/UserProfile/UserProfile.scss
@@ -4,6 +4,21 @@
     padding-bottom: 3rem;
   }
 }
+.perfilButton {
+  padding: 3rem;
+  > p {
+    font-size: larger;
+    font-weight: 700;
+  }
+}
+.perfilButton:hover {
+  transform: scale(0.9);
+}
 .perfilIcono {
   width: 10rem;
+  padding: 2rem;
+}
+.perfilCircle {
+  border: 0.5rem solid #f07674;
+  border-radius: 50%;
 }
