--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -6,3 +6,11 @@
   border-radius: 2rem;
   border: none;
 }
+@mixin BotonCoral {
+  padding: 10px 17px;
+  font-size: 16px;
+  color: white;
+  background-color: #f07674;
+  border-radius: 2rem;
+  border: none;
+}
