--- a/client/src/styles/variables.scss
+++ b/client/src/styles/variables.scss
@@ -6,3 +6,11 @@ $botonBlanco: (
   border-radius: 2rem,
   border: none,
 );
+$botonBlanco: (
+  padding: 10px 15px,
+  font-size: 16px,
+  color: white,
+  background-color: #f07674,
+  border-radius: 2rem,
+  border: none,
+);
