--- a/client/src/pages/TermsConditions/TermsConditions.scss
+++ b/client/src/pages/TermsConditions/TermsConditions.scss
@@ -4,6 +4,7 @@
   > p {
     padding-top: 2rem;
   }
+  padding: 2rem 6rem 5rem 5rem;
 }
 .termsButton {
   @include BotonCoral;
@@ -13,5 +14,5 @@
   margin: 0.5rem;
 }
 .termsBackCombo {
-  padding: 2rem;
+  padding: 2rem 2rem 2rem 5rem;
 }
