--- a/client/src/components/Navbar/NavbarApp.scss
+++ b/client/src/components/Navbar/NavbarApp.scss
@@ -1,15 +1,31 @@
 @import "../../styles/variables.scss";
 @import "../../styles/mixins.scss";
 
-.navContainer {
-  max-width: 1600px;
-  width: 100%;
-  max-height: 70px;
-  height: 70px;
-  margin: 0 auto;
+.navAvatarContainer {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+
+  @media only screen and (max-width: 768px) {
+    margin-left: auto;
+    align-items: flex-start;
+  }
+}
+
+.navAvatar {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  cursor: pointer;
+
+  @media only screen and (max-width: 768px) {
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+  }
 }
 
 .bg-body-tertiary {
@@ -19,6 +35,8 @@
 
 .navEnlaces {
   color: white;
+  font-size: large;
+  font-weight: bold;
 }
 
 .NavbarBrand {
@@ -29,13 +47,17 @@
   }
 }
 
-.navAvatar {
-  img {
-    width: 4rem;
-    aspect-ratio: 1/1;
-    object-fit: cover;
-    border-radius: 50%;
-  }
+.navAvatarInitial {
+  font-size: 1.5rem;
+  color: #f07674;
+  margin: 0;
+}
+
+.navAvatarImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 .d-flex.mx-auto {
@@ -47,6 +69,11 @@
   border-radius: 20px;
 }
 
+.navCsesion {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 .navBoton {
   @include BotonBlanco;
   transition: transform 0.3s;
