--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -1,6 +1,10 @@
 @import "./../../../styles/mixins.scss";
 .OneTourButton {
   @include BotonCoral;
+  margin-top: 1rem;
+}
+.OneTourInfo {
+  padding-left: 8rem;
 }
 .OneTourImg {
   width: 25rem;
@@ -12,4 +16,50 @@
 .OneTourProfilePicture {
   width: 5rem;
   border-radius: 50%;
+}
+.OneTourLike {
+  > img {
+    width: 3rem;
+    margin-left: 8rem;
+  }
+  > img:hover {
+    width: 3.2rem;
+  }
+}
+.OneTourLocation {
+  width: 1.8rem;
+  margin-left: 4rem;
+}
+.OneTourLocation:hover {
+  width: 2rem;
+}
+/* ---------------------RATING -------------------- */
+.ec-stars-wrapper {
+  /* Espacio entre los inline-block (los hijos, los `a`) 
+	   http://ksesocss.blogspot.com/2012/03/display-inline-block-y-sus-empeno-en.html */
+  font-size: 0;
+  /* Podríamos quitarlo, 
+		pero de esta manera (siempre que no le demos padding), 
+		sólo aplicará la regla .ec-stars-wrapper:hover a cuando
+		también se esté haciendo hover a alguna estrella */
+  display: inline-block;
+}
+.ec-stars-wrapper a {
+  text-decoration: none;
+  display: inline-block;
+  /* Volver a dar tamaño al texto */
+  font-size: 32px;
+  font-size: 2rem;
+
+  color: #888;
+}
+
+.ec-stars-wrapper:hover a {
+  color: #f07674;
+}
+/*
+ * El selector de hijo, es necesario para aumentar la especifidad
+ */
+.ec-stars-wrapper > a:hover ~ a {
+  color: #888;
 }
