--- a/client/src/pages/tours/CreateTour/CreateTour.scss
+++ b/client/src/pages/tours/CreateTour/CreateTour.scss
@@ -29,4 +29,13 @@
   > img {
     border-radius: 1rem;
   }
+  > h3 {
+    color: #f07674;
+  }
+}
+.fatherSectionTitle {
+  > h4 {
+    color: gray;
+    padding: 2rem 0rem 0rem 1rem;
+  }
 }
