--- a/client/src/components/CardOneSection/CardOneSection.scss
+++ b/client/src/components/CardOneSection/CardOneSection.scss
@@ -4,10 +4,9 @@
   border-radius: 1rem;
 }
 
-
 .CardOneSectionButton {
   @include BotonCoral;
-.CardOneSection {
-  margin: 1rem;
-
+  .CardOneSection {
+    margin: 1rem;
+  }
 }
