--- a/client/src/pages/PrivacyPolicy/PrivacyPolicy.scss
+++ b/client/src/pages/PrivacyPolicy/PrivacyPolicy.scss
@@ -1,18 +1,44 @@
 @import "./../../styles/mixins.scss";
 
-.policyGeneral {
-  > p {
-    padding-top: 2rem;
+.polGeneral {
+  width: 40rem;
+  // background-color: #f1eeee;
+  padding: 4rem;
+  margin-bottom: 4rem;
+  color: #8b8989;
+  border-radius: 0 3rem 3rem 0;
+
+  @media (max-width: 767px) {
+    width: 100%;
+    padding: 2rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
   }
-  padding: 2rem 6rem 5rem 5rem;
 }
-.policyButton {
+.polButton {
   @include BotonCoral;
 }
-.policyBackArrow {
-  width: 1.8rem;
-  margin: 0.5rem;
+
+.imgPol {
+  width: 28rem;
+  border-radius: 1rem;
+  margin-top: -52rem;
+
+  @media (max-width: 767px) {
+    display: none;
+  }
 }
-.policyBackCombo {
-  padding: 2rem 2rem 2rem 5rem;
+
+.h2Pol {
+  font-size: 2.5rem;
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  color: rgba(128, 128, 128, 0.331);
+
+  @media (max-width: 767px) {
+    font-size: 1.8rem;
+    margin-top: -3rem;
+  }
 }
