--- a/client/src/pages/auth/Register/RegisterForm.scss
+++ b/client/src/pages/auth/Register/RegisterForm.scss
@@ -12,6 +12,9 @@ Form {
   }
 }
 
+// Ajusta el margen inferior según tus necesidades
+// Ajusta el margen inferior según tus necesidades
+
 .divRegister {
   width: 40rem;
   background-color: white;
