--- a/client/src/pages/admin/AdminStats/AdminStats.scss
+++ b/client/src/pages/admin/AdminStats/AdminStats.scss
@@ -1,38 +1,32 @@
-@import "./../../../styles/mixins.scss";
-
-.registerButton {
-  @include BotonCoral;
-  &:hover {
-    background-color: grey;
-  }
-}
 .admin-stats-container {
   margin-top: 20px;
-}
 
-.admin-stats-title {
-  text-align: center;
-  color: gray;
-}
-
-.admin-stats-table {
-  width: 80%;
-  margin: 20px auto;
-  background-color: #f8f9fa;
-
-  th {
-    background-color: #f07674;
-    color: white;
-  }
-
-  td,
-  th {
+  .admin-stats-title {
     text-align: center;
+    color: gray;
+    margin-bottom: 20px;
   }
 
-  @media only screen and (max-width: 768px) {
-    .admin-stats-table {
-      width: 100%; // Ajusta el ancho al 100% en dispositivos más pequeños
+  .admin-stats-cards {
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    .card {
+      width: 300px;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .registerButton {
+      margin-top: 10px;
+      width: 100%;
+      background-color: #f07674;
+      transition: background-color 0.3s;
+      &:hover {
+        background-color: #afb4b7;
+      }
     }
   }
 }
