--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -14,3 +14,11 @@
   border-radius: 2rem;
   border: none;
 }
+@mixin BotonGris {
+  padding: 10px 17px;
+  font-size: 16px;
+  color: white;
+  background-color: rgb(182, 177, 177);
+  border-radius: 2rem;
+  border: none;
+}
