--- a/client/src/components/AdminTable/AdminTable.scss
+++ b/client/src/components/AdminTable/AdminTable.scss
@@ -8,10 +8,21 @@
     margin-bottom: 20px;
   }
 
+  .btn-back {
+    background-color: #f07674;
+    border: none;
+    display: flex;
+    justify-content: flex-end;
+
+    @media (min-width: 768px) {
+      justify-content: center;
+    }
+  }
+
   .table-wrapper {
     .table {
       th {
-        background-color: #f07674; // Color rosado
+        background-color: #f07674;
         color: white;
         font-size: 18px;
 
@@ -39,11 +50,11 @@
           right: 10px;
 
           &.active {
-            background-color: #28a745; // Color verde
+            background-color: #28a745;
           }
 
           &.inactive {
-            background-color: #dc3545; // Color rojo
+            background-color: #dc3545;
           }
         }
       }
@@ -52,12 +63,12 @@
     .btn-activate,
     .btn-deactivate,
     .btn-profile {
-      background-color: #f07674; // Color rosado
+      background-color: #f07674;
       color: white;
       border: none;
 
       &:hover {
-        background-color: #d9534f; // Cambiar el color al hacer hover
+        background-color: #d9534f;
       }
 
       &:focus {
