--- a/client/src/pages/admin/AdminProfile/AdminProfile.scss
+++ b/client/src/pages/admin/AdminProfile/AdminProfile.scss
@@ -1,35 +1,35 @@
 .perfilGeneral {
-  .perfilButton {
-    flex: 1;
-    text-align: center;
-
-    .perfilCircle {
-      width: 120px;
-      height: 120px;
-      border-radius: 50%;
-      overflow: hidden;
-      margin-bottom: 10px;
-
-      img {
-        width: 80%;
-        height: 80%;
-        object-fit: contain;
-        cursor: pointer;
-      }
-    }
-
-    p {
-      margin: 0;
-    }
+  padding: 2rem 10rem 2rem 6rem;
+  > h1 {
+    padding-bottom: 3rem;
   }
+}
 
-  @media (max-width: 768px) {
-    .perfilButton {
-      margin-bottom: 20px;
-    }
+.perfilButton {
+  padding: 3rem;
+  text-align: center;
+  > p {
+    font-size: larger;
+    font-weight: 700;
+    margin-top: 1rem;
+    color: rgb(108, 107, 107);
+  }
+}
+.perfilButton:hover {
+  transform: scale(0.9);
+}
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.perfilCircle {
+  width: 10rem;
+  height: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 0.5rem solid #f07674;
+  border-radius: 50%;
+  overflow: hidden;
+  img {
+    width: 80%;
+    height: auto;
   }
 }
