--- a/client/src/pages/users/UserProfile/UserProfile.scss
+++ b/client/src/pages/users/UserProfile/UserProfile.scss
@@ -1,11 +1,11 @@
 .UserPerfilGeneral {
-  padding: 2rem 10rem 2rem 6rem;
-  > h1 {
-    padding-bottom: 3rem;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem;
 }
 .UserPerfilButton {
-  padding: 3rem;
+  padding: 2rem;
   > p {
     font-size: larger;
     font-weight: 700;
@@ -15,10 +15,48 @@
   transform: scale(0.9);
 }
 .UserPerfilIcono {
-  width: 10rem;
+  width: 2rem;
+}
+.UserPerfilCard {
+  width: 25rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 20px -5px rgba(28, 28, 28, 0.271);
+  padding: 2rem;
+
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+
+  @media (max-width: 991px) {
+    width: 100%;
+  }
+
+  @media (min-width: 1024px) and (max-width: 1366px) {
+    width: 100%;
+  }
+}
+
+.UserCard {
+  width: 25rem;
+}
+
+.UserPerfilCard2 {
+  width: 18rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 20px -5px rgba(28, 28, 28, 0.271);
   padding: 2rem;
 }
-.UserPerfilCircle {
-  border: 0.5rem solid #f07674;
-  border-radius: 50%;
+
+.pParrafo {
+  color: #c5c3c3;
+}
+
+.h5perfil {
+  span {
+    color: #c5c3c3;
+  }
+
+  @media (max-width: 767px) {
+    font-size: 1rem;
+  }
 }
