--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -1,4 +1,28 @@
 @import "./../../../styles/mixins.scss";
+
+.container-xxl {
+  max-width: 75rem;
+}
+
+.guideTitle {
+  font-size: 2rem;
+
+  @media (max-width: 767px) {
+    font-size: 1.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
+.guideCity {
+  font-size: 1.8rem;
+  color: #c6c4c4;
+
+  @media (max-width: 767px) {
+    font-size: 1.5rem;
+  }
+}
+
 .OneTourButton {
   @include BotonCoral;
   margin: 1rem;
@@ -8,18 +32,55 @@
   margin: 1rem;
 }
 .OneTourInfo {
-  padding-left: 10rem;
-  padding-right: 20rem;
+  width: 30rem;
+
+  @media (max-width: 767px) {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
+
+.OneTourDescription {
+  width: 30rem;
+  color: #8f8c8c;
+  margin-top: 1rem;
+  margin-bottom: -0.5rem;
+
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+}
+.custom-btn-container {
+  padding: 0;
+}
+
+.OneTourBotones {
+  width: 30rem;
+  margin-bottom: 5rem;
+
+  @media (max-width: 767px) {
+    width: 100%;
+  }
+}
+
 .OneTourImg {
-  width: 25rem;
+  width: 30rem;
   border-radius: 1.5rem;
+  aspect-ratio: 1/1;
+  object-fit: cover;
 }
-.OneTourSectionImg {
-  width: 10rem;
+
+.createFor {
+  color: #c6c4c4;
+  margin-bottom: 0;
 }
+
+.nameCreatorGuide {
+  font-size: 1.1rem;
+}
+
 .OneTourProfilePicture {
-  width: 5rem;
+  width: 4rem;
   border-radius: 50%;
 }
 .OneTourLike {
@@ -32,51 +93,28 @@
   }
 }
 .OneTourLocation {
-  width: 1.8rem;
-  margin-left: 4rem;
+  width: 1.3rem;
 }
+
 .OneTourLocation:hover {
-  width: 2rem;
+  width: 1.5rem;
 }
-.OneTourUserInfo {
-  margin: 1rem;
-  > h5 {
-    margin: 1rem;
-  }
-}
+
 .starSelected {
   color: #f07674;
 }
 .starNotSelected {
   color: #888;
 }
-/* ---------------------RATING -------------------- */
-.ec-stars-wrapper {
-  /* Espacio entre los inline-block (los hijos, los `a`) 
-	   http://ksesocss.blogspot.com/2012/03/display-inline-block-y-sus-empeno-en.html */
-  font-size: 0;
-  /* Podríamos quitarlo, 
-		pero de esta manera (siempre que no le demos padding), 
-		sólo aplicará la regla .ec-stars-wrapper:hover a cuando
-		también se esté haciendo hover a alguna estrella */
-  display: inline-block;
-}
-.ec-stars-wrapper a {
-  text-decoration: none;
-  display: inline-block;
-  /* Volver a dar tamaño al texto */
-  font-size: 32px;
-  font-size: 2rem;
-
-  color: #888;
-}
 
 .ec-stars-wrapper:hover a {
   color: #f07674;
 }
-/*
- * El selector de hijo, es necesario para aumentar la especifidad
- */
+
 .ec-stars-wrapper > a:hover ~ a {
   color: #888;
+}
+
+.OneTourSectionImg {
+  width: 10rem;
 }
