cambios de logica y maquetación admin

--- a/client/src/components/AdminTable/AdminTable.scss
+++ b/client/src/components/AdminTable/AdminTable.scss
@@ -51,7 +51,7 @@
       color: white;
       border: none;
       margin-bottom: 8px;
-      position: relative; // Añadir posición relativa
+      position: relative;
 
       &:hover {
         background-color: #d9534f;
