--- a/client/src/components/Navbar/NavbarApp.scss
+++ b/client/src/components/Navbar/NavbarApp.scss
@@ -4,10 +4,9 @@
 .navAvatarContainer {
   display: flex;
   align-items: center;
-
   @media only screen and (max-width: 768px) {
-    margin-left: auto;
-    align-items: flex-start;
+    display: flex;
+    justify-content: end;
   }
 }
 
@@ -21,11 +20,28 @@
   align-items: center;
   background-color: white;
   cursor: pointer;
-
+}
+.navCsesion {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
   @media only screen and (max-width: 768px) {
-    margin-left: 1rem;
-    margin-top: 0.5rem;
-    display: none;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+}
+.responsiveBoton {
+  @media only screen and (max-width: 768px) {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+}
+
+.me-auto {
+  @media only screen and (max-width: 768px) {
+    align-items: end;
   }
 }
 
@@ -73,11 +89,6 @@
   border-radius: 20px;
 }
 
-.navCsesion {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
 /* BOTON / BOTON:HOVER DE TOP GUIAS */
 .btnfos-2 {
   letter-spacing: 1px;
