--- a/client/src/components/CardOneSection/CardOneSection.scss
+++ b/client/src/components/CardOneSection/CardOneSection.scss
@@ -1,12 +1,36 @@
 @import "./../../styles/mixins.scss";
 
-.OneTourSectionImg {
+.CardOneSectionButton {
+  @include BotonBordeGris;
+}
+
+.CardOneSection {
+  width: 13rem;
+  padding: 1rem;
+  border: none;
+  border-radius: 1.5rem;
+  box-shadow: 0px 0px 20px -5px rgba(28, 28, 28, 0.271);
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.TourSectionImg {
+  width: 11rem;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border-radius: 1rem;
 }
 
-.CardOneSectionButton {
-  @include BotonCoral;
-  .CardOneSection {
-    margin: 1rem;
-  }
+.h5CardOneSection {
+  font-size: 1rem;
+}
+
+.pInfo {
+  font-size: 1rem;
+  background-color: #f2f0f0;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  color: rgb(149, 147, 147);
 }
