--- a/client/src/components/AdminTable/AdminTable.scss
+++ b/client/src/components/AdminTable/AdminTable.scss
@@ -66,17 +66,24 @@
       }
 
       &.btn-activate {
-        background-color: #dc3545; // Cambiar color para Activar
+        padding: 10px 17px;
+        font-size: 16px;
+        border-radius: 2rem;
+        border: none;
+        background-color: #dc3545;
       }
 
       &.btn-deactivate {
-        background-color: #28a745; // Cambiar color para Bloquear
+        padding: 10px 17px;
+        font-size: 16px;
+        border-radius: 2rem;
+        border: none;
+        background-color: #28a745;
       }
     }
 
     .btn-profile {
-      background-color: #f07674;
-      border: none;
+      @include BotonCoral;
     }
   }
 }
