--- a/client/src/components/CardOneSection/CardOneSection.scss
+++ b/client/src/components/CardOneSection/CardOneSection.scss
@@ -14,6 +14,11 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @media (max-width: 844px) {
+    margin-left: 4rem;
+    margin-bottom: 1rem;
+  }
 }
 
 .TourSectionImg {
