--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -14,6 +14,12 @@
   }
 }
 
+.h3OneTour {
+  @media (max-width: 844px) {
+    font-size: 1.5rem;
+  }
+}
+
 .guideCity {
   font-size: 1.8rem;
   color: #c6c4c4;
