--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -16,9 +16,7 @@
 ::-webkit-scrollbar-thumb {
   background-color: #f07674;
   border-radius: 1rem;
-  border: 2px solid black;
 }
-
 ::-webkit-scrollbar-thumb:hover {
-  background-color: white;
+  background-color: #ec9794;
 }
