--- a/client/src/components/AdminTable/AdminTable.scss
+++ b/client/src/components/AdminTable/AdminTable.scss
@@ -3,7 +3,7 @@
 .table-container {
   text-align: center;
   margin-top: 20px;
-
+  //lakhsf
   .table-title {
     color: gray;
     font-size: 24px;
