--- a/client/src/components/CardOneSection/CardOneSection.scss
+++ b/client/src/components/CardOneSection/CardOneSection.scss
@@ -16,8 +16,13 @@
   justify-content: space-between;
 
   @media (max-width: 844px) {
-    margin-left: 4rem;
-    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  @media (max-width: 1180px) {
+    margin-left: 1rem;
   }
 }
 
