--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -18,6 +18,11 @@
   @media (max-width: 844px) {
     font-size: 1.5rem;
   }
+
+  @media (max-width: 844px) {
+    padding-left: 1rem;
+    margin-bottom: 2rem;
+  }
 }
 
 .guideCity {
@@ -72,7 +77,7 @@
   margin-bottom: 5rem;
 
   @media (max-width: 844px) {
-    width: 100%;
+    padding-left: 1rem;
   }
 }
 
