--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -23,6 +23,8 @@
     padding-left: 1rem;
     margin-bottom: 2rem;
   }
+
+  /* ñlajkdsfñlkdjafñaiuerlñandfñahdfñladkhjflkdhflakdfladfñk */
 }
 
 .guideCity {
