últimos retoques de maquetación admin

--- a/client/src/components/AdminTable/AdminTable.scss
+++ b/client/src/components/AdminTable/AdminTable.scss
@@ -84,6 +84,10 @@
 
     .btn-profile {
       @include BotonCoral;
+      transition: background-color 0.3s;
+      &:hover {
+        background-color: #afb4b7;
+      }
     }
   }
 }
