maquetacion create section

--- a/client/src/pages/auth/Register/RegisterForm.scss
+++ b/client/src/pages/auth/Register/RegisterForm.scss
@@ -21,7 +21,8 @@ Form {
   border-radius: 10px;
   box-shadow: 0px 0px 20px -5px rgba(28, 28, 28, 0.271);
   padding: 4rem;
-  margin-top: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 8rem;
 
   @media (max-width: 767px) {
     width: 100%;
