--- a/client/src/components/CardOneSection/CardOneSection.scss
+++ b/client/src/components/CardOneSection/CardOneSection.scss
@@ -15,9 +15,11 @@
   flex-direction: column;
   justify-content: space-between;
 
-  @media (max-width: 844px) {
-    margin-left: 4rem;
-    margin-bottom: 1rem;
+  @media (max-width: 1180px) {
+    margin: 0;
+    margin-bottom: 5rem;
+    margin-right: 3rem;
+    margin-top: -3rem;
   }
 }
 
