--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -12,6 +12,12 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  @media (max-width: 1180px) {
+    font-size: 2rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
 
 .h3OneTour {
@@ -19,12 +25,10 @@
     font-size: 1.5rem;
   }
 
-  @media (max-width: 844px) {
+  @media (max-width: 1180px) {
     padding-left: 1rem;
-    margin-bottom: 2rem;
+    margin-top: -5rem;
   }
-
-  /* ñlajkdsfñlkdjafñaiuerlñandfñahdfñladkhjflkdhflakdfladfñk */
 }
 
 .guideCity {
@@ -57,6 +61,10 @@
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
+
+  @media (max-width: 1180px) {
+    width: 100%;
+  }
 }
 
 .OneTourDescription {
@@ -67,7 +75,11 @@
 
   @media (max-width: 844px) {
     padding-left: 0.5rem;
-    padding-right: 5rem;
+    padding-right: 0;
+  }
+
+  @media (max-width: 1180px) {
+    width: 100%;
   }
 }
 .custom-btn-container {
