--- a/client/src/pages/tours/CreateTour/CreateTour.scss
+++ b/client/src/pages/tours/CreateTour/CreateTour.scss
@@ -1,14 +1,26 @@
 @import "./../../../styles/mixins.scss";
 
+.label-img {
+  background-color: #f3f1f1;
+  border-radius: 0.5rem;
+  border: 1px dashed #b2b0b0;
+  padding: 0.7rem;
+  width: 14.5rem;
+  font-family: "Jost", sans-serif;
+  color: #616466;
+  transition: all 0.1s;
+  margin-top: -0.5rem;
+  margin-bottom: 0.8rem;
+}
+
+.iconSubirImg {
+  width: 2rem;
+  height: 2rem;
+}
+
 .createSectionButton {
   @include BotonCoral;
   margin-right: 1rem;
-}
-
-.createTourButton {
-  @include BotonCoral;
-  margin-right: 1rem;
-  margin-top: 1.5rem;
 }
 
 .Creando {
@@ -61,7 +73,7 @@
 }
 
 .divFormSection {
-  width: 65rem;
+  width: 55rem;
   background-color: white;
   border-radius: 1.5rem;
   box-shadow: 0px 0px 20px -5px rgba(28, 28, 28, 0.271);
