--- a/client/src/styles/mixins.scss
+++ b/client/src/styles/mixins.scss
@@ -5,6 +5,10 @@
   color: #f07674;
   border-radius: 2rem;
   border: none;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 @mixin BotonCoral {
   padding: 10px 17px;
@@ -13,6 +17,10 @@
   background-color: #f07674;
   border-radius: 2rem;
   border: none;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 @mixin BotonGris {
   padding: 10px 17px;
@@ -21,6 +29,10 @@
   background-color: rgb(182, 177, 177);
   border-radius: 2rem;
   border: none;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
 
 @mixin BotonBordeGris {
@@ -30,4 +42,8 @@
   background-color: white;
   border-radius: 2rem;
   border: 1px solid #c5c3c3;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 }
