--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -1,5 +1,5 @@
 @import "./../../../styles/mixins.scss";
-
+@import "animate.css";
 .container-xxl {
   max-width: 75rem;
 }
@@ -105,7 +105,11 @@
     width: 100%;
   }
 }
-
+.OneTourProfilePicture:hover,
+.starSelected:hover,
+.starNotSelected:hover {
+  cursor: pointer;
+}
 .createFor {
   color: #c6c4c4;
   margin-bottom: 0;
@@ -125,7 +129,8 @@
     margin-left: 4rem;
   }
   > img:hover {
-    width: 3.2rem;
+    animation: heartBeat;
+    animation-duration: 1s;
   }
 }
 .OneTourLocation {
