--- a/client/src/pages/tours/WaitingValidation/WaitingValidation.scss
+++ b/client/src/pages/tours/WaitingValidation/WaitingValidation.scss
@@ -1,23 +1,22 @@
 @import "./../../../styles/mixins.scss";
 
 .waitingFrame {
-  background-color: #f07674;
-  color: white;
-  border-radius: 5rem;
+  width: 40rem;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px -5px rgba(28, 28, 28, 0.271);
+  padding: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 8rem;
   text-align: center;
-  padding: 5rem;
-  margin: 3rem;
-  width: 35rem;
-  aspect-ratio: 1/1;
-  > p {
-    margin: 1.5rem;
-  }
 }
 .waitingIcon {
   width: 13rem;
   padding: 1rem;
   margin: 1rem;
+  background-color: #f07674;
+  border-radius: 50%;
 }
 .waitingVolver {
-  @include BotonBlanco;
+  @include BotonCoral;
 }
