--- a/client/src/pages/admin/AdminProfile/AdminProfile.scss
+++ b/client/src/pages/admin/AdminProfile/AdminProfile.scss
@@ -1,15 +1,24 @@
-.perfilGeneral {
+/* .perfilGeneral {
   padding: 2rem 10rem 2rem 6rem;
   > h1 {
     padding-bottom: 3rem;
   }
+} */
+.perfilGeneral {
+  width: 50rem;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0px 0px 20px -5px rgba(28, 28, 28, 0.271);
+  padding: 4rem;
+  margin-top: 2rem;
+  margin-bottom: 8rem;
+  text-align: center;
 }
-
 .perfilButton {
   padding: 3rem;
   text-align: center;
   > p {
-    font-size: larger;
+    font-size: large;
     font-weight: 700;
     margin-top: 1rem;
     color: rgb(108, 107, 107);
