cambios finales esperamos

--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -121,6 +121,8 @@
 
 .OneTourProfilePicture {
   width: 4rem;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border-radius: 50%;
 }
 .OneTourLike {
