--- a/client/src/pages/tours/OneTour/OtherUser.scss
+++ b/client/src/pages/tours/OneTour/OtherUser.scss
@@ -24,6 +24,8 @@
 
 .profileAvatarImg {
   width: 8rem;
+  aspect-ratio: 1/1;
+  object-fit: cover;
   border-radius: 50%;
 }
 .profileAvatarInitial {
