--- a/client/src/pages/tours/OneTour/OneTour.scss
+++ b/client/src/pages/tours/OneTour/OneTour.scss
@@ -4,6 +4,29 @@
   max-width: 75rem;
 }
 
+.oneTourAvatarContainer {
+  display: flex;
+  align-items: center;
+}
+
+.oneTourAvatarInitial {
+  font-size: 2rem;
+  color: white;
+  margin: 0;
+}
+
+.oneTourAvatar {
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f07674;
+  cursor: pointer;
+}
+
 .guideTitle {
   font-size: 2rem;
 
@@ -160,4 +183,38 @@
 
 .OneTourSectionImg {
   width: 10rem;
+}
+
+.iconAccesibilidad {
+  width: 2.5rem;
+  height: 2rem;
+}
+
+.infoAccesibilidad {
+  background-color: #f2f0f0;
+  border-radius: 0.6rem;
+  padding: 0.8rem 0.7rem 0.1rem 0.7rem;
+  margin-bottom: 1.5rem;
+  font-size: 0.8rem;
+  width: 30rem;
+}
+
+.divmensajeValidacion {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  border: 1px dashed #f07674;
+  width: 29rem;
+  border-radius: 0.5rem;
+  margin-top: 1rem;
+
+  @media (max-width: 844px) {
+    width: 100%;
+  }
+}
+
+.mensajeValidacion {
+  color: #f07674;
+  margin-top: 0.9rem;
 }
